--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,11 +62,12 @@
         android:textStyle="bold"
         android:backgroundTint="@color/alizarin"
         android:padding="15dp"
+        android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
         android:layout_marginTop="20dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintTop_toBottomOf="@id/txtTituloServicos"
+        app:layout_constraintTop_toBottomOf="@id/recyclerViewServicos"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
